# ntp

./: .gitignore  ChangeLog  Makefile.am  NEWS  README.md  build  check-libntp.mf  configure.ac  depsver.mf  flock-build  packageinfo.sh
.github/: FUNDING.yml
html/: accopt.html  authentic.html  authopt.html  clockopt.html  confopt.html  copyright.html  keygen.html  miscopt.html  monopt.html  ntpq.html
include/: Makefile.am  lib_strbuf.h  libssl_compat.h  ntp.h  ntp_calendar.h  ntp_calgps.h  ntp_config.h  ntp_keyacc.h  ntp_md5.h  ntp_net.h  ntp_refclock.h  ntp_request.h  ntp_stdlib.h  ntp_types.h  ntpd.h  ssl_applink.c  vint64ops.h
libntp/: Makefile.am  a_md5encrypt.c  authkeys.c  authreadkeys.c  authusekey.c  caltontp.c  decodenetnum.c  emalloc.c  lib_strbuf.c  libssl_compat.c  machines.c  mstolfp.c  ntp_calendar.c  ntp_calgps.c  ntp_crypto_rnd.c  ntp_realpath.c  numtoa.c  ssl_init.c  strdup.c  systime.c  timexsup.c  vint64ops.c  work_fork.c  work_thread.c  xsbprintf.c
libntp/aes/: FROM  Makefile.am  configure.ac  rfc4493-test.c  test-aes-libtomcrypt.c  test-aes-openssl.c  validate-aes.c
libparse/: Makefile.am  ieee754io.c
ntpd/: Makefile.am  complete.conf.in  invoke-ntp.conf.texi  invoke-ntp.keys.texi  invoke-ntpd.texi  keyword-gen-utd  keyword-gen.c  ntp.conf.5man  ntp.conf.5mdoc  ntp.conf.def  ntp.conf.html  ntp.conf.man.in  ntp.conf.mdoc.in  ntp.keys.5man  ntp.keys.5mdoc  ntp.keys.html  ntp.keys.man.in  ntp.keys.mdoc.in  ntp_clockdev.c  ntp_config.c  ntp_control.c  ntp_crypto.c  ntp_io.c  ntp_keyword.h  ntp_leapsec.c  ntp_loopfilter.c  ntp_monitor.c  (+38 more)
(+196 files in other folders)
